# cpp-variant

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/avakar/: monostate.hpp  variant.hpp
include_std/: variant
src/: variant_alternative.hpp  variant_fwd.hpp  variant_helpers.hpp  variant_impl.hpp  variant_size.hpp  variant_visit.hpp
test/: variant.cpp
